--- a/src/exercise/05.md
+++ b/src/exercise/05.md
@@ -103,4 +103,4 @@ parent component can call those directly.
 ## 🦉 Feedback
 
 Fill out
-[the feedback form](https://ws.kcd.im/?ws=Advanced%20React%20Hooks%20%F0%9F%94%A5&e=05%3A%20useImperativeHandle%3A%20scroll%20to%20top%2Fbottom&em=fedeviotti%40gmail.com).
+[the feedback form](https://ws.kcd.im/?ws=Advanced%20React%20Hooks%20%F0%9F%94%A5&e=05%3A%20useImperativeHandle%3A%20scroll%20to%20top%2Fbottom&em=fedeviotti%40gmail.comfedeviotti%40gmail.com).
